--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 clap = { version = "4.5.26", features = ["derive"] }
 thiserror = "2.0.11"
 ast_macro = { path = "ast_macro" }
+regex = "1.11.1"
+test-generator = "0.3.1"
