--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ thiserror = "2.0.11"
 ast_macro = { path = "ast_macro" }
 regex = "1.11.1"
 test-generator = "0.3.1"
+strum = { version = "0.27.1", features = ["derive"] }
